--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@ body {
     margin:0;
 }
 
+::selection, ::-webkit-selection {
+    background-color: rgba(0,123,255,.25);
+}
+
 #result {
     width:275px;
     height:275px;
@@ -41,7 +45,7 @@ h2 {
     font-size: 18px;
     text-align:center;
 }
-
+,
 #code::before {
     content:"#";
 }
@@ -70,4 +74,21 @@ label {
     padding-right: 150px;
     font-size: 28px;
     color: #8e8e93;
+}
+
+h1,h2,div, label {
+    box-sizing:border-box;
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+    -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none !important;
+    -webkit-text-size-adjust:none; 
+    -webkit-overflow-scrolling: touch;
+}
+
+img::selection, img::-webkit-selection {
+    background-color: transparent;
 }
