--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,6 @@
 body {
     width:100%;
     height:100vh;
-    position:fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,10 +37,6 @@ h2 {
     font-size: 18px;
     text-align:center;
 }
-,
-#code::before {
-    content:"#";
-}
 
 #code {
     margin-top: 30px;
@@ -65,12 +60,13 @@ h2 {
     height:275px;
     border-radius: 5px;
     box-shadow: 0 15px 50px rgba(0,0,0,.375);
+    margin-top: 30px;
 }
 
 label {
     position:absolute;
     z-index:-99;
-    margin-top: 153px;
+    margin-top: 130px;
     padding-right: 150px;
     font-size: 28px;
     color: #8e8e93;
@@ -91,4 +87,14 @@ h1,h2,div, label, body, html {
 
 img::selection, img::-webkit-selection {
     background-color: transparent;
+}
+
+#download {
+    padding: 8px 40px;
+    background-color: #007aff;
+    box-shadow: 0 3px 15px rgba(0,123,255,.875);
+    border-radius: 5px;
+    font-size: 24px;
+    color:#fff;
+    margin-top: 30px;
 }
