--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 body {
     width:100%;
     height:100vh;
+    position:fixed;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,6 +13,13 @@ body {
 
 ::selection, ::-webkit-selection {
     background-color: rgba(0,123,255,.25);
+}
+
+#result {
+    width:275px;
+    height:275px;
+    border-radius: 5px;
+    box-shadow: 0 15px 50px rgba(0,0,0,.375);
 }
 
 #placer {
@@ -56,23 +64,21 @@ h2 {
 }
 
 #canvas {
-    width:275px;
-    height:275px;
-    border-radius: 5px;
-    box-shadow: 0 15px 50px rgba(0,0,0,.375);
-    margin-top: 30px;
+    width:2048px;
+    height:2048px;
+    display:none;
 }
 
 label {
     position:absolute;
     z-index:-99;
-    margin-top: 130px;
+    margin-top: 153px;
     padding-right: 150px;
     font-size: 28px;
     color: #8e8e93;
 }
 
-h1,h2,div, label, body, html {
+h1,h2,div, label {
     box-sizing:border-box;
     -webkit-user-select: none !important;
     -moz-user-select: none !important;
@@ -87,14 +93,4 @@ h1,h2,div, label, body, html {
 
 img::selection, img::-webkit-selection {
     background-color: transparent;
-}
-
-#download {
-    padding: 8px 40px;
-    background-color: #007aff;
-    box-shadow: 0 3px 15px rgba(0,123,255,.875);
-    border-radius: 5px;
-    font-size: 24px;
-    color:#fff;
-    margin-top: 30px;
 }
